<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dreamsense.segundasemana.MainActivity"
    android:orientation="vertical"
    android:transitionGroup="false"
    android:nestedScrollingEnabled="false"
    android:measureWithLargestChild="false">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/etNombre"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/nombre"></android.support.design.widget.TextInputEditText>
    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnPicker"
            android:layout_gravity="center"
            android:textSize="@dimen/letraTxtV"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layoutFecha"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etFecha"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:text="@string/fechaDefault"></android.support.design.widget.TextInputEditText></android.support.design.widget.TextInputLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnDate"
                android:text="@string/btnFecha"
                android:theme="@style/RaisedButton"
                />
        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <android.support.design.widget.TextInputEditText
        android:id="@+id/etTelefono"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:text="@string/telofono"></android.support.design.widget.TextInputEditText></android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/email"></android.support.design.widget.TextInputEditText></android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descripcion"
        android:layout_marginTop="@dimen/top"
        android:textSize="@dimen/letraTxtV"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/etDescripcion"
            android:layout_height="match_parent"
            android:layout_width="match_parent"></android.support.design.widget.TextInputEditText></android.support.design.widget.TextInputLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSig"
        android:text="@string/btn"
        android:textSize="@dimen/letraTxtV"
        android:theme="@style/RaisedButton"
        android:elevation="@dimen/btnElevation"/>

</LinearLayout>
